package simulation;

/**
 * Class responsible for storing the "meaning" of the data encoded in a chromosome. <br>
 * Child classes may include PathPhenotype and (potentially) IKPhenotype
 */
public abstract class Phenotype {
    public Phenotype(Chromosome chromosome) {
    }
}
